--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
     .attribution { margin-top: 30px; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-    .container { 
+    main { 
       display: flex; 
       flex-direction: column; 
       align-items: center; 
@@ -32,21 +32,19 @@
       border-radius:20px; 
       /* box-shadow: 0px 5px 5px 5px rgb(209, 209, 209) ; */
     }
-    .container p { text-align: center;}
-    p.first { font-size: 22px; font-weight: 700; color: #112037}
+    p { text-align: center;}
+    h1 { font-size: 22px; font-weight: 700; color: #112037; text-align: center}
     p.second{ font-size: 15px; padding: 0 20px; color: #9096a2}
     img { width: 100%; border-radius: 20px;}
   </style>
 </head>
 <body>
 
-  <div class="container">
+  <main>
     <img src="./images/image-qr-code.png" alt="">
-    <div>
-      <p class="first">Improve your front-end skills by building projects</p>
+      <h1>Improve your front-end skills by building projects</h1>
       <p class="second">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-  </div>
+  </main>
   <!-- <img src="./design/desktop-design.jpg" alt=""> -->
   
   <div class="attribution">
