--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 
   <main>
-    <img src="./images/image-qr-code.png" alt="">
+    <img src="./images/image-qr-code.png" alt="QR Code Image">
       <h1>Improve your front-end skills by building projects</h1>
       <p class="second">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
